# DataStrcture-Algorithm

./: README.md
A9/: CMakeLists.txt  README.md  main  main.cpp
A9/main.dSYM/Contents/Resources/DWARF/: main
A9/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
DoublyLinkedList/: CMakeLists.txt  ReadMe.md  iterator.cpp  iterator.h  main.cpp  menu.cpp  menu.h  udll.cpp  udll.h  udllnode.h
Hanoi/: README.md
Hanoi/Hanoi/: main.cpp
Hanoi/Hanoi.xcodeproj/: project.pbxproj
Hanoi/Hanoi.xcodeproj/project.xcworkspace/xcuserdata/kenny.xcuserdatad/: UserInterfaceState.xcuserstate
Quick_InverseSquare/: README.md  quick_inverseSqaure.c
